--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -82,3 +82,13 @@
   year = {2008},
   urldate = {2018-11-20},
 }
+
+@book{posa1,
+  title={Pattern-Oriented Software Architecture, A System of Patterns},
+  author={Buschmann, F. and Meunier, R. and Rohnert, H. and Sommerlad, P. and Stal, M.},
+  isbn={9781118725269},
+  series={Pattern-Oriented Software Architecture},
+  year={1996},
+  publisher={Wiley}
+}
+
