--- a/doc/abstract.tex
+++ b/doc/abstract.tex
@@ -15,7 +15,7 @@ Since qutebrowser uses the Python programming language in conjunction with the
 Qt library for graphical user interfaces, it is standing on the shoulders of
 giants: It does not implement complex tasks such as downloading and executing
 HTML/CSS/JavaScript code itself. Instead, it relies on the QtWebEngine project
-to so, which is largely based on the same code as Google Chrome.
+to do so, which is largely based on the same code as Google Chrome.
 
 Work on qutebrowser started in December 2013. Since then, it gained a big
 community of thousands of users and dozens of contributors. The aim of this
