--- a/meetings/2018-12-18.md
+++ b/meetings/2018-12-18.md
@@ -27,6 +27,8 @@
   - Abstract fertig
   - Letztes Sprachreview
   - Doku fertig: Zeitauswertung, diverse FIXMEs
+  - Poster
+  - Abgabe
   
 # Traktanden
 
