Update meeting notes

--- a/meetings/2018-12-18.md
+++ b/meetings/2018-12-18.md
@@ -1,7 +1,7 @@
 # Zeit und Personen
 
 - Woche 14
-- 2018-12-18, 08:50 bis XX:XX
+- 2018-12-18, 08:50 bis 10:20
 - Stefan Keller und Florian Bruhin
 
 # Last/Blockers/Next
@@ -33,10 +33,23 @@
 # Traktanden
 
 - Aufgabenstellung
+  - "sehr spezifische" -> ohne sehr
+  - Plugins -> Extensions
 - Seitenränder: jetzt okay?
+  - ja!
 - Broschüren-Abstract
   - Titel-Grossschreibung?
+    -> alles klein
   - Qt: GUI-Library vs. Framework
   - "Was wurde nun erreicht"
+    -> zwei Absätze umkehren
+  - Ev. Satz zu Future Work
   - ggf. weiteres Feedback: https://github.com/qutebrowser/qutebrowser-hsr-sa/issues/19
 - "Urheber-Vereinbarung" soll nun also doch unterschrieben sein?
+
+
+# TODO
+
+- Vereinbarung mit meiner Unterschrift -> Archiv
+- Ohne Unterschrift -> Doku
+- Aufgabenstellung ohne Unterschrift
