--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -72,9 +72,9 @@ their extensions independently from the core development.
 
 Initially, qutebrowser was developed without knowledge of proper software
 engineering practices, which resulted in some maintainability issues. While many
-of those issues have since been resolved, some still remain. Those
-refactorings affect the API exposed to extensions, and therefore should be taken
-care of before attempting to design a extension API.
+of those issues have since been resolved, some still remain. The refactorings
+needed to fix those issues will affect the API exposed to extensions, and
+therefore should be taken care of before attempting to design a extension API.
 
 The full list of relevant refactorings is tracked as a Kanban
 board\footnote{\url{https://github.com/qutebrowser/qutebrowser/projects/3}} in
@@ -152,7 +152,7 @@ project methodology used and allocates the time available.
 It also analyzes the risks involved. Chapter \ref{ch:requirements} specifies the
 project requirements in more detail. In chapter \ref{ch:existing}, existing
 similar work is examined. Chapter \ref{ch:evaluation} notes the criteria being
-considered for the project. Based on those criteria, a concept was designed in chapter
+considered for the project. Based on these criteria, a concept was designed in chapter
 \ref{ch:concept}. Finally, chapter \ref{ch:implementation} explains the actual
 implementation, while chapter \ref{ch:results} analyzes the results.
 
