--- a/doc/requirements.tex
+++ b/doc/requirements.tex
@@ -42,7 +42,7 @@ extension API:
   \item[Compability] The qutebrowser project runs on a variety of different
     software versions -- various operating systems (Linux, macOS, Windows,
     and more) are supported, including different Qt and Python versions. The
-    extension API should abstract over those differences, so an extension
+    extension API should abstract over these differences, so an extension
     written for qutebrowser (or core code moved into such an extension) runs in
     all situations qutebrowser itself can run.
   \item[Performance] Having code in extensions (rather than in the core part of a
