Fix mypy casing
Fixes #20

--- a/doc/projmanagement.tex
+++ b/doc/projmanagement.tex
@@ -129,7 +129,7 @@ is allotted as shown in figure \ref{img:schedule}.
     \ganttbar{API design}{9}{9} \\
 
     \ganttgroup{Construction}{10}{13} \\
-    \ganttbar{Introducing MyPy}{10}{10} \\
+    \ganttbar{Introducing mypy}{10}{10} \\
     \ganttbar{Adding extension API}{11}{12} \\
     \ganttmilestone{M2: API review}{11} \\
     \ganttbar{Refactoring core into extensions}{11}{12} \\
