--- a/doc/results.tex
+++ b/doc/results.tex
@@ -44,7 +44,7 @@ extension API were identified:
 
 \begin{itemize}
   \item qutebrowser should introduce ``gradual typing'' and a type checker such
-    as MyPy into its toolchain. This goal was fully achieved despite some issues
+    as mypy into its toolchain. This goal was fully achieved despite some issues
     with third-party projects (which were fixed as part of this project), see
     section \ref{sec:mypy}.
   \item The documentation toolchain used in qutebrowser should be switched to
